--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "concurrently": "^5.1.0",
+    "express": "^4.17.1",
     "firebase": "^7.7.0",
+    "mongoose": "^5.8.11",
+    "morgan": "^1.9.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -16,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "concurrently  -n 'server,client' -c 'blue,green' \"nodemon server.js\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +43,18 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/popcornn95/ecw.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/popcornn95/ecw/issues"
+  },
+  "homepage": "https://github.com/popcornn95/ecw#readme"
 }
